--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "declaration": true,
-        "outDir": "./out",
+        "outDir": "types",
         "target": "es2015",
         "module": "CommonJS",
         "moduleResolution": "Node",
