--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "devDependencies": {
         "@rspack/core": "^1.0.0",
         "@types/memory-fs": "^0.3.7",
+        "bumpp": "^10.1.0",
         "husky": "^9.0.11",
         "jest": "^29.7.0",
         "lint-staged": "^15.2.2",
@@ -13,7 +14,7 @@
         "typescript": "^5.4.3"
     },
     "description": "Detect modules with circular dependencies when bundling with rspack.",
-    "version": "0.0.1",
+    "version": "0.0.2",
     "engines": {
         "node": ">=18.0.0"
     },
@@ -21,7 +22,8 @@
         "test": "jest",
         "lint": "tsc --noEmit",
         "build": "tsc --emitDeclarationOnly",
-        "prepare": "husky"
+        "prepare": "husky",
+        "release": "bumpp"
     },
     "lint-staged": {
         "**/*": "prettier --write --ignore-unknown"
