--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
         "lint": "tsc --noEmit",
         "build": "tsc --emitDeclarationOnly",
         "prepare": "husky",
-        "release": "bumpp"
+        "release": "bumpp && pnpm publish"
     },
     "lint-staged": {
         "**/*": "prettier --write --ignore-unknown"
