--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
         "@rspack/core": "^1.0.0",
         "@types/memory-fs": "^0.3.7",
         "bumpp": "^10.1.0",
-        "jest": "^29.7.0",
         "lint-staged": "^15.2.2",
         "memory-fs": "^0.5.0",
-        "prettier": "^3.2.5",
         "ts-loader": "^9.5.1",
-        "typescript": "^5.4.3"
+        "typescript": "^5.4.3",
+        "vitest": "^3.0.9"
     },
     "description": "Detect modules with circular dependencies when bundling with rspack.",
     "version": "0.0.4",
@@ -18,7 +17,7 @@
         "node": ">=18.0.0"
     },
     "scripts": {
-        "test": "jest",
+        "test": "vitest",
         "lint": "tsc --noEmit",
         "build": "tsc --emitDeclarationOnly",
         "release": "bumpp && pnpm publish"
@@ -40,10 +39,5 @@
     "bugs": {
         "url": "https://github.com/Sunny-117/rspack-circular-dependency-plugin/issues"
     },
-    "homepage": "https://github.com/Sunny-117/rspack-circular-dependency-plugin#readme",
-    "jest": {
-        "testMatch": [
-            "**/?(*.)(spec|test).js?(x)"
-        ]
-    }
+    "homepage": "https://github.com/Sunny-117/rspack-circular-dependency-plugin#readme"
 }
