--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "devDependencies": {
         "@rspack/core": "^1.0.0",
         "@types/memory-fs": "^0.3.7",
+        "@vitest/coverage-v8": "^3.0.9",
         "bumpp": "^10.1.0",
         "lint-staged": "^15.2.2",
         "memory-fs": "^0.5.0",
@@ -17,7 +18,7 @@
         "node": ">=18.0.0"
     },
     "scripts": {
-        "test": "vitest",
+        "test": "vitest --run",
         "lint": "tsc --noEmit",
         "build": "tsc --emitDeclarationOnly",
         "release": "bumpp && pnpm publish"
