--- a/package.json
+++ b/package.json
@@ -1,36 +1,52 @@
 {
     "name": "rspack-circular-dependency-plugin",
-    "main": "index.js",
+    "version": "0.0.7",
+    "description": "Detect modules with circular dependencies when bundling with rspack.",
+    "main": "dist/index.cjs",
+    "module": "dist/index.mjs",
+    "types": "dist/index.d.cts",
+    "exports": {
+        ".": {
+            "import": {
+                "types": "./dist/index.d.ts",
+                "default": "./dist/index.js"
+            },
+            "require": {
+                "types": "./dist/index.d.cts",
+                "default": "./dist/index.cjs"
+            }
+        }
+    },
+    "files": [
+        "dist"
+    ],
+    "scripts": {
+        "test": "vitest --run",
+        "lint": "tsc --noEmit",
+        "build": "tsdown",
+        "release": "pnpm build && bumpp && pnpm publish"
+    },
     "devDependencies": {
         "@rspack/core": "^1.0.0",
         "@types/memory-fs": "^0.3.7",
+        "@vitest/coverage-istanbul": "^3.0.9",
         "@vitest/coverage-v8": "^3.0.9",
         "bumpp": "^10.1.0",
         "lint-staged": "^15.2.2",
         "memory-fs": "^0.5.0",
-        "ts-loader": "^9.5.1",
+        "tsdown": "^0.20.3",
         "typescript": "^5.4.3",
         "vitest": "^3.0.9"
     },
-    "description": "Detect modules with circular dependencies when bundling with rspack.",
-    "version": "0.0.7",
-    "engines": {
-        "node": ">=18.0.0"
-    },
-    "scripts": {
-        "test": "vitest --run",
-        "lint": "tsc --noEmit",
-        "build": "tsc --emitDeclarationOnly",
-        "release": "bumpp && pnpm publish"
+    "peerDependencies": {
+        "@rspack/core": "^1.0.0"
     },
     "lint-staged": {
         "**/*": "prettier --write --ignore-unknown"
     },
-    "files": [
-        "index.js",
-        "types/index.d.ts"
-    ],
-    "types": "types/index.d.ts",
+    "engines": {
+        "node": ">=18.0.0"
+    },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/Sunny-117/rspack-circular-dependency-plugin.git"
