--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,17 +1,16 @@
 {
     "compilerOptions": {
         "declaration": true,
-        "outDir": "types",
-        "target": "es2015",
-        "module": "CommonJS",
-        "moduleResolution": "Node",
-        "allowJs": true,
-        "checkJs": true,
+        "declarationMap": true,
+        "outDir": "dist",
+        "target": "ES2020",
+        "module": "ESNext",
+        "moduleResolution": "bundler",
         "isolatedModules": true,
         "esModuleInterop": true,
         "strict": true,
         "skipLibCheck": true,
-        "lib": ["ES2015", "ES2019.Object"]
+        "lib": ["ES2020"]
     },
-    "include": ["index.js"]
+    "include": ["src"]
 }
