--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "test": "vitest --run",
         "lint": "tsc --noEmit",
         "build": "tsdown",
+        "dev": "tsdown --watch",
         "release": "pnpm build && bumpp && pnpm publish"
     },
     "devDependencies": {
